--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @list.name %></h1>
 <ul>
 <% @list.foods.each do |food| %>
-  <li><%= food %></li>
+  <li><%= food.name %></li>
 <% end %>
 </ul>
