Implemented add food feature

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,7 @@
 <% all_lists.each do |list| %>
 <%= link_to list.name, list %>
 <% end %>
+<%= link_to "Add Food", new_food_path %>
 
 </body>
 </html>
