--- a/app/views/foods/search.html.erb
+++ b/app/views/foods/search.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
   <% @results.each do |r| %>
-    <li><%= r.name + ": " + r.list.name %></li>
+    <li><span class="<%= list_class_name(r.list) %>"><%= r.name %></span>: <%= r.list.name %></li>
   <% end %>
 </ul>
