--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -2,14 +2,18 @@
 <table>
   <tr>
     <th>Name</th>
+    <% if current_user %>
     <th>Edit</th>
     <th>Delete</th>
+    <% end %>
   </tr>
 <% @list.foods.each do |food| %>
   <tr>
     <td><span class="<%= list_class_name(food.list) %>"><%= food.name %></span></td>
+    <% if current_user %>
     <td><%= link_to "Edit", edit_food_path(food) %></td>
     <td><%= link_to "Delete", food_path(food), method: :delete %></td>
+    <% end %>
   </tr>
 <% end %>
 </table>
