--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>Oxalates</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <link rel="apple-touch-icon" sizes="120x120" href="<%= image_path('apple-touch-icon-120x120.png') %>"/>
+  <link rel="apple-touch-icon" sizes="152x152" href="<%= image_path('apple-touch-icon-152x152.png') %>"/>
   <%= csrf_meta_tags %>
 </head>
 <body>
