--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <link rel="apple-touch-icon" sizes="120x120" href="<%= image_path('apple-touch-icon-120x120.png') %>"/>
   <link rel="apple-touch-icon" sizes="152x152" href="<%= image_path('apple-touch-icon-152x152.png') %>"/>
   <%= csrf_meta_tags %>
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
 </head>
 <body>
 <% if current_user %>
