--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,32 +10,13 @@
   <meta name="apple-mobile-web-app-capable" content="yes"/>
 </head>
 <body>
-<% if current_user %>
-<%= link_to "Log out", session_path(from: current_path), method: :delete %>
-<% else %>
-<%= form_tag session_path do %>
-  <%= hidden_field_tag :from, current_path %>
-  <%= label_tag :password %>
-  <%= password_field_tag :password %>
-  <%= submit_tag "Log in" %>
-<% end %>
-<% end %>
-
-<%= form_tag search_path, method: "get" do %>
-  <%= label_tag :search %>
-  <%= text_field_tag :search %>
-  <%= submit_tag "Search" %>
-<% end %>
+<%= render "session" %>
+<%= render "search" %>
 
 <%= yield %>
 
-<% all_lists.each do |list| %>
-<%= link_to list.name, list %>
-<% end %>
+<%= render "list_menu" %>
 
-<% if current_user %>
-<%= link_to "Add Food", new_food_path(list_id: @list.try(:id)) %>
-<% end %>
-
+<%= render "add_food" %>
 </body>
 </html>
