Refactor colors into variables

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,16 +1,20 @@
+$very_high_text_color: black;
+$high_text_color: #e00;
+$moderate_text_color: #fa0;
+$low_text_color: green;
+
 .list--very-high {
-  color: black;
+  color: $very_high_text_color;
 }
 
 .list--high {
-  color: red;
+  color: $high_text_color;
 }
 
 .list--moderate {
-  color: #cc0;
+  color: $moderate_text_color;
 }
 
 .list--low {
-  color: green;
-  font-weight: bold;
+  color: $low_text_color;
 }
