--- a/app/views/application/_list_menu.html.erb
+++ b/app/views/application/_list_menu.html.erb
@@ -1,3 +1,12 @@
+<ul class="list-menu">
 <% all_lists.each do |list| %>
-  <%= link_to list.name, list %>
+  <li class="list-menu-item <%= active_class_name(list) %>">
+    <%= link_to list do %>
+      <div class="list-menu-item-content">
+        <div class="list-menu-item-icon"></div>
+        <p class="list-menu-item-text"><%= list.name %></p>
+      </div>
+    <% end %>
+  </li>
 <% end %>
+</ul>
