--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,19 +4,34 @@
   <title>Oxalates</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= csrf_meta_tags %>
+  <meta name="viewport" content="initial-scale=1.0,user-scalable=no"/>
+  <meta name="apple-mobile-web-app-capable" content="yes"/>
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"/>
   <link rel="apple-touch-icon" sizes="120x120" href="<%= image_path('apple-touch-icon-120x120.png') %>"/>
   <link rel="apple-touch-icon" sizes="152x152" href="<%= image_path('apple-touch-icon-152x152.png') %>"/>
-  <%= csrf_meta_tags %>
-  <meta name="apple-mobile-web-app-capable" content="yes"/>
 </head>
 <body>
-<%= render "session" %>
-<%= render "search" %>
+<div class="body">
 
+<% if @list %>
+<h1 class="title <%= list_class_name(@list) %>"><%= @list.name %> Oxalate Foods</h1>
+<% else %>
+<h1 class="title">Oxalates</h1>
+<% end %>
+<div class="actions">
+  <% # would prefer session | search | add/edit but iOS is not closing the form tag %>
+  <%= render "add_edit_food" %>
+  <%= render "session" %>
+  <%= render "search" %>
+</div>
+
+<div class="content">
 <%= yield %>
+</div>
+
+</div>
 
 <%= render "list_menu" %>
-
-<%= render "add_food" %>
 </body>
 </html>
