--- a/app/views/lists/show.html.erb
+++ b/app/views/lists/show.html.erb
@@ -1,19 +1,5 @@
-<h1><%= @list.name %> Oxalate Foods</h1>
-<table>
-  <tr>
-    <th>Name</th>
-    <% if current_user %>
-    <th>Edit</th>
-    <th>Delete</th>
-    <% end %>
-  </tr>
+<ul class="food-list">
 <% @list.foods.each do |food| %>
-  <tr>
-    <td><span class="<%= list_class_name(food.list) %>"><%= food.name %></span></td>
-    <% if current_user %>
-    <td><%= link_to "Edit", edit_food_path(food) %></td>
-    <td><%= link_to "Delete", food_path(food), method: :delete %></td>
-    <% end %>
-  </tr>
+  <li class="food-list-item <%= list_class_name(food.list) %>"><%= food.name %></li>
 <% end %>
-</table>
+</ul>
