--- a/app/views/application/_list_menu.html.erb
+++ b/app/views/application/_list_menu.html.erb
@@ -3,7 +3,9 @@
   <li class="list-menu-item <%= active_class_name(list) %>">
     <%= link_to list do %>
       <div class="list-menu-item-content">
-        <div class="list-menu-item-icon"></div>
+        <div class="list-menu-item-icon">
+          <%= render "list_menu_item_icon", list: list %>
+        </div>
         <p class="list-menu-item-text"><%= list.name %></p>
       </div>
     <% end %>
