--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -12,6 +12,7 @@ $actions_font_size: 16px;
 $actions_gutter_width: 0.5em;
 $session_padding: $actions_gutter_width 0 $actions_gutter_width $actions_gutter_width;
 $session_width: 4em;
+$session_font_size: 24px;
 $search_padding: $actions_gutter_width;
 $search_width: 9em;
 $add_food_padding: $session_padding;
@@ -81,31 +82,52 @@ body, h1, p {
   a {
     text-decoration: none;
   }
+
+  .session {
+    margin: $session_padding;
+    min-width: $session_width;
+    max-width: $session_width;
+    &.logout, &.login {
+      display: block;
+    }
+
+    text-align: center;
+  }
+
+  .search {
+    min-width: $search_width;
+    padding: $search_padding;
+  }
+
+  .add-food {
+    padding: $add_food_padding;
+    min-width: $add_food_width;
+
+    text-align: center;
+  }
+
+  .edit-food {
+    padding: $edit_food_padding;
+    min-width: $edit_food_width;
+
+    text-align: center;
+  }
+}
+
+.content {
+  overflow: scroll;
 }
 
 .session {
-  margin: $session_padding;
-  min-width: $session_width;
-  max-width: $session_width;
-  &.logout {
-    display: block;
-  }
-
-  text-align: center;
-
-  label {
-    @extend %hidden;
+  p {
+    margin: 0.5em;
   }
   input[type='password'] {
-    font-size: $actions_font_size;
-    width: 100%;
+    font-size: $session_font_size;
   }
 }
 
 .search {
-  min-width: $search_width;
-  padding: $search_padding;
-
   label, input[type='submit'] {
     @extend %hidden;
   }
@@ -113,24 +135,6 @@ body, h1, p {
     font-size: $actions_font_size;
     width: 100%;
   }
-}
-
-.add-food {
-  padding: $add_food_padding;
-  min-width: $add_food_width;
-
-  text-align: center;
-}
-
-.edit-food {
-  padding: $edit_food_padding;
-  min-width: $edit_food_width;
-
-  text-align: center;
-}
-
-.content {
-  overflow: scroll;
 }
 
 .food-list {
