--- a/app/views/foods/search.html.erb
+++ b/app/views/foods/search.html.erb
@@ -1,3 +1,4 @@
+<% # FIXME: style %>
 <ul>
   <% @results.each do |r| %>
     <li><span class="<%= list_class_name(r.list) %>"><%= r.name %></span>: <%= r.list.name %></li>
