--- a/app/views/application/_search.html.erb
+++ b/app/views/application/_search.html.erb
@@ -1,5 +1,5 @@
 <%= form_tag search_path, method: 'get', class: 'search' do %>
   <%= label_tag :search %>
-  <%= search_field_tag :search, '', placeholder: 'Search' %>
+  <%= search_field_tag :search, @query, placeholder: 'Search' %>
   <%= submit_tag "Search" %>
 <% end %>
