--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,10 +1,9 @@
-<% # FIXME: style %>
-<h1>Add a Food</h1>
-<%= form_for @food do |f| %>
-  <%= f.label :name %>
-  <%= f.text_field :name %>
-  <%= f.label :list %>
-  <%= f.select :list, options_from_collection_for_select(all_lists, :id, :name, @list_id) %>
+<%= form_for @food, html: {class: 'add-food'} do |f| %>
+  <h1>Add a Food</h1>
+  <p><%= f.label :name %></p>
+  <p><%= f.text_field :name %></p>
+  <p><%= f.label :list %></p>
+  <p><%= f.select :list, options_from_collection_for_select(all_lists, :id, :name, @list_id) %></p>
 
-  <%= f.submit "Add" %>
+  <p><%= f.submit "Add" %></p>
 <% end %>
