--- a/app/views/foods/edit.html.erb
+++ b/app/views/foods/edit.html.erb
@@ -4,5 +4,5 @@
   <%= f.label :list %>
   <%= f.select :list, options_from_collection_for_select(all_lists, :id, :name, @food.list_id) %>
 
-  <%= f.submit "Save" %>
+  <%= f.submit "Done" %>
 <% end %>
