--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -2,6 +2,9 @@
   <ul class="food-list">
   <% @list.foods.each do |food| %>
     <li>
+      <%= link_to food_path(food), method: :delete, class: 'destroy-food-list-item' do %>
+        <%= image_tag 'destroy_food_list_item.svg', alt: "Delete" %>
+      <% end %>
       <%= link_to food.name, edit_food_path(food), class: "edit-food-list-item #{list_class_name(food.list)}" %>
       <%= hidden_field_tag 'list[foods][][id]', food.id %>
       <%= label_tag 'list[foods][][name]', "Name", class: 'food-list-item-name' %>
