--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -1,11 +1,11 @@
 $background_color: #fff;
 $font_family: "Helvetica", sans-serif;
 
-$title_height: 28px;
-$title_padding: 20px 0;
+$title_height: 38px;
+$title_padding: 15px 0;
 $title_background_color: #a5a5a5;
 $title_font_family: "MarkerFelt-Thin", $font_family;
-$title_font_size: 28px;
+$title_font_size: $title_height;
 
 $actions_height: 44px;
 $actions_background_color: lighten($title_background_color, 20%);
@@ -73,9 +73,9 @@ body, h1, p {
 }
 
 .title {
-  min-height: $title_height;
-  max-height: $title_height;
   padding: $title_padding;
+  -webkit-flex-basis: $title_height;
+  flex-basis: $title_height;
 
   background-color: $title_background_color;
   font-family: $title_font_family;
