--- a/app/views/foods/edit.html.erb
+++ b/app/views/foods/edit.html.erb
@@ -2,7 +2,7 @@
   <%= f.label :name %>
   <%= f.text_field :name %>
   <%= f.label :list %>
-  <%= f.select :list, options_from_collection_for_select(all_lists, :id, :name, @food.list_id) %>
+  <%= f.select :list, lists_options(@food.list_id) %>
 
   <%= f.submit "Done" %>
 <% end %>
