--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -2,7 +2,7 @@
   <p><%= f.label :name, "New food name" %></p>
   <p><%= f.text_field :name %></p>
   <p><%= f.label :list %></p>
-  <p><%= f.select :list, options_from_collection_for_select(all_lists, :id, :name, @list_id) %></p>
+  <p><%= f.select :list, lists_options(@list_id) %></p>
 
   <p><%= f.submit "Add" %></p>
 <% end %>
