--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -1,6 +1,10 @@
-<%= form_for @food, html: {class: 'add-food'} do |f| %>
+<%= form_for @food, html: {class: 'edit-food'} do |f| %>
   <p><%= f.label :name, "New food name" %></p>
   <p><%= f.text_field :name %></p>
+  <p><%= f.label :oxalate_mg, "Oxalates per serving (mg)" %></p>
+  <p><%= f.number_field :oxalate_mg %></p>
+  <p><%= f.label :serving %></p>
+  <p><%= f.text_field :serving %></p>
   <p><%= f.label :list %></p>
   <p><%= f.select :list, lists_options(@list_id) %></p>
 
