--- a/app/views/application/_add_edit_food.html.erb
+++ b/app/views/application/_add_edit_food.html.erb
@@ -1,6 +1,10 @@
 <% if current_user %>
   <%= link_to "Add", new_food_path(list_id: @list.try(:id)), class: 'add-food' %>
   <% if @list %>
-    <%= link_to "Edit", edit_list_path(@list.id), class: 'edit-list' %>
+    <% if current_page?(controller: 'lists', action: 'edit') %>
+      <%= link_to "Done", list_path(@list.id), class: 'edit-list' %>
+    <% else %>
+      <%= link_to "Edit", edit_list_path(@list.id), class: 'edit-list' %>
+    <% end %>
   <% end %>
 <% end %>
