--- a/app/views/lists/edit.html.erb
+++ b/app/views/lists/edit.html.erb
@@ -4,7 +4,7 @@
     <%= link_to food_path(food), method: :delete, class: 'destroy-food-list-item' do %>
       <%= image_tag 'destroy_food_list_item.svg', alt: "Delete" %>
     <% end %>
-    <%= link_to food.name, edit_food_path(food), class: "edit-food-list-item #{list_class_name(food.list)}" %>
+    <%= link_to food_list_item(food), edit_food_path(food), class: "edit-food-list-item #{list_class_name(food.list)}" %>
   </li>
 <% end %>
 </ul>
