--- a/app/views/foods/new.html.erb
+++ b/app/views/foods/new.html.erb
@@ -2,7 +2,7 @@
   <p><%= f.label :name, "New food name" %></p>
   <p><%= f.text_field :name %></p>
   <p><%= f.label :oxalate_mg, "Oxalates per serving (mg)" %></p>
-  <p><%= f.number_field :oxalate_mg %></p>
+  <p><%= f.number_field :oxalate_mg, step: "any" %></p>
   <p><%= f.label :serving %></p>
   <p><%= f.text_field :serving %></p>
   <p><%= f.label :list %></p>
