--- a/app/javascript/oxalates/index.scss
+++ b/app/javascript/oxalates/index.scss
@@ -1,29 +1,6 @@
-$background_color: #fff;
-$font_family: "Helvetica", sans-serif;
+@import "./body-form";
+@import "./constants";
 
-$title_height: 38px;
-$title_padding: 15px 0;
-$title_background_color: #a5a5a5;
-$title_font_family: "MarkerFelt-Thin", $font_family;
-$title_font_size: $title_height;
-
-$actions_height: 44px;
-$actions_background_color: lighten($title_background_color, 20%);
-$actions_font_size: 16px;
-$actions_gutter_width: 0.5em;
-$session_padding: $actions_gutter_width 0 $actions_gutter_width $actions_gutter_width;
-$session_width: 4em;
-$search_padding: $actions_gutter_width;
-$search_width: 9em;
-$add_food_padding: $session_padding;
-$add_food_width: 2em;
-$edit_food_padding: $session_padding;
-$edit_food_width: 2em;
-
-$very_high_text_color: black;
-$high_text_color: #e00;
-$moderate_text_color: #fa0;
-$low_text_color: green;
 $food_list_item_border: 1px solid #ddd;
 $food_list_item_padding: 0.75em;
 $food_list_item_font_size: 16px;
@@ -31,17 +8,6 @@ $destroy_food_list_item_icon_height: 22px;
 $destroy_food_list_item_icon_width: 22px;
 $destroy_food_list_item_link_height: 44px;
 $destroy_food_list_item_link_width: 44px;
-$body_form_padding: 0 1em;
-$body_form_section_margin: 8px;
-$body_form_header_font_size: 24px;
-$body_form_font_size: 24px;
-$body_form_input_height: 1.7em;
-$body_form_input_margin: 0 0 1em 0;
-$body_form_input_padding: 2px;
-$body_form_select_height: 1.5em;
-$body_form_submit_background_color: lighten($title_background_color, 20%);
-$body_form_submit_border: 1px solid darken($body_form_submit_background_color, 20%);
-$body_form_submit_height: 2em;
 
 html {
   font-family: $font_family;
@@ -64,80 +30,8 @@ body, h1, p {
   height: calc(100vh - 44px);
 }
 
-.title {
-  padding: $title_padding;
-  -webkit-flex-basis: $title_height;
-  flex-basis: $title_height;
-
-  background-color: $title_background_color;
-  font-family: $title_font_family;
-  font-size: $title_font_size;
-  text-align: center;
-}
-
-.actions {
-  display: -webkit-flex;
-  -webkit-align-items: center;
-  -webkit-justify-content: space-between;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
-  min-height: $actions_height;
-
-  background-color: $actions_background_color;
-  font-size: $actions_font_size;
-  a {
-    text-decoration: none;
-  }
-
-  .session {
-    margin: $session_padding;
-    min-width: $session_width;
-    max-width: $session_width;
-    &.logout, &.login {
-      display: block;
-    }
-
-    text-align: center;
-  }
-
-  .search {
-    min-width: $search_width;
-    padding: $search_padding;
-  }
-
-  .add-food {
-    padding: $add_food_padding;
-    min-width: $add_food_width;
-
-    text-align: center;
-  }
-
-  .edit-food {
-    padding: $edit_food_padding;
-    min-width: $edit_food_width;
-
-    text-align: center;
-  }
-}
-
 .content {
   overflow: scroll;
-}
-
-.session {
-  @extend %body-form;
-}
-
-.search {
-  label, input[type='submit'] {
-    @extend %hidden;
-  }
-  input[type='search'] {
-    font-size: $actions_font_size;
-    width: 100%;
-  }
 }
 
 .food-list {
@@ -191,58 +85,4 @@ input.food-list-item-name {
 
 .edit-food {
   @extend %body-form;
-}
-
-.very-high {
-  color: $very_high_text_color;
-}
-
-.high {
-  color: $high_text_color;
-}
-
-.moderate {
-  color: $moderate_text_color;
-}
-
-.low {
-  color: $low_text_color;
-}
-
-%body-form {
-  padding: $body_form_padding;
-
-  p {
-    margin: $body_form_section_margin;
-  }
-
-  input, select {
-    display: block;
-    box-sizing: border-box;
-    font-size: $body_form_font_size;
-    height: $body_form_input_height;
-    line-height: $body_form_input_height;
-    margin: $body_form_input_margin;
-    padding: $body_form_input_padding;
-    width: 100%;
-  }
-  select {
-    -webkit-appearance: menulist-button;
-    background: $background_color;
-    height: $body_form_select_height;
-  }
-  input[type="submit"] {
-    background: $body_form_submit_background_color;
-    border: $body_form_submit_border;
-    height: $body_form_submit_height;
-  }
-}
-
-%hidden {
-  overflow: hidden;
-  position: absolute;
-  left: -10000px;
-  top: auto;
-  height: 1px;
-  width: 1px;
 }
