Add food search

--- a/app/javascript/oxalates/_constants.scss
+++ b/app/javascript/oxalates/_constants.scss
@@ -1,3 +1,5 @@
+$actions_font_size: 16px;
+$actions_gutter_width: 0.5em;
 $background_color: #fff;
 $font_family: "Helvetica", sans-serif;
 $title_background_color: #a5a5a5;
