--- a/app/javascript/oxalates/_constants.scss
+++ b/app/javascript/oxalates/_constants.scss
@@ -1,6 +1,8 @@
 $actions_font_size: 16px;
 $actions_gutter_width: 0.5em;
+$action_padding: $actions_gutter_width 0 $actions_gutter_width $actions_gutter_width;
 $background_color: #fff;
 $font_family: "Helvetica", sans-serif;
+$session_width: 5em;
 $title_background_color: #a5a5a5;
 $touchable_height: 44px;
