--- a/app/javascript/oxalates/ActionsMenu.scss
+++ b/app/javascript/oxalates/ActionsMenu.scss
@@ -1,13 +1,10 @@
-@import "./body-form";
 @import "./constants";
 
 $actions_height: 44px;
 $actions_background_color: lighten($title_background_color, 20%);
-$session_padding: $actions_gutter_width 0 $actions_gutter_width $actions_gutter_width;
-$session_width: 4em;
-$add_food_padding: $session_padding;
+$add_food_padding: $action_padding;
 $add_food_width: 2em;
-$edit_food_padding: $session_padding;
+$edit_food_padding: $action_padding;
 $edit_food_width: 2em;
 
 .actions {
@@ -26,17 +23,6 @@ $edit_food_width: 2em;
     text-decoration: none;
   }
 
-  .session {
-    margin: $session_padding;
-    min-width: $session_width;
-    max-width: $session_width;
-    &.logout, &.login {
-      display: block;
-    }
-
-    text-align: center;
-  }
-
   .add-food {
     padding: $add_food_padding;
     min-width: $add_food_width;
@@ -50,8 +36,4 @@ $edit_food_width: 2em;
 
     text-align: center;
   }
-}
-
-.session {
-  @extend %body-form;
 }
