--- a/app/javascript/oxalates/_food-action.scss
+++ b/app/javascript/oxalates/_food-action.scss
@@ -5,7 +5,7 @@ $food_action_padding: $action_padding;
 $food_action_width: 2em;
 
 .food-action {
-  @extend %flat-button;
+  @extend %link-button;
   padding: $food_action_padding;
   min-width: $food_action_width;
 
