--- a/app/javascript/oxalates/_body-form.scss
+++ b/app/javascript/oxalates/_body-form.scss
@@ -8,9 +8,10 @@ $body_form_input_height: 1.7em;
 $body_form_input_margin: 0 0 1em 0;
 $body_form_input_padding: 2px;
 $body_form_select_height: 1.5em;
-$body_form_submit_background_color: lighten($title_background_color, 20%);
-$body_form_submit_border: 1px solid darken($body_form_submit_background_color, 20%);
-$body_form_submit_height: 2em;
+$body_form_button_background_color: lighten($title_background_color, 20%);
+$body_form_button_border: 1px solid darken($body_form_button_background_color, 20%);
+$body_form_button_height: 2em;
+$body_form_submit_background_color: mix($body_form_button_background_color, green);
 
 %body-form {
   padding: $body_form_padding;
@@ -19,7 +20,7 @@ $body_form_submit_height: 2em;
     margin: $body_form_section_margin;
   }
 
-  input, select {
+  button, input, select {
     display: block;
     box-sizing: border-box;
     font-size: $body_form_font_size;
@@ -34,9 +35,12 @@ $body_form_submit_height: 2em;
     background: $background_color;
     height: $body_form_select_height;
   }
+  button, input[type="submit"] {
+    background: $body_form_button_background_color;
+    border: $body_form_button_border;
+    height: $body_form_button_height;
+  }
   input[type="submit"] {
     background: $body_form_submit_background_color;
-    border: $body_form_submit_border;
-    height: $body_form_submit_height;
   }
 }
